# swan

./: .environment.yaml  .gitignore  .gitlab-ci.yml  .readthedocs.yml  .zenodo.json  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  LICENSE  NOTICE  README.rst  environment.yml  requirements.txt  setup.cfg  setup.py
data/: ResulsTraining.md  Training_hyperparameters.md
docs/: Makefile  api.rst  api_data.rst  api_filtering.rst  api_models.rst  available_models.rst  conf.py  index.rst  make.bat  training_and_validation.rst  tutorial.rst  tutorial_models.rst  tutorial_screening.rst
example/: fingerprint.py  mynet.py
notebooks/: Filter_visualization.ipynb  candidates.csv  models.ipynb
scripts/: extract_cdft_properties.py  extract_geometries.py  extract_results.py  plot_means.py  plot_rvalues.py  predict.py  predict_all.py  predict_gp.py  predict_gpytorch.py  predict_torch.py  remove_non_organic.py  run_gp_models.py  run_model.py  run_scikit_models.py  run_torch_models.py  search_scikit_hyper.py  smiles_calculator.py
swan/: __init__.py  cat_interface.py  cosmo.py  datasets.py  early_stopping.py  functions.py  geometry.py  input_validation.py  load_models.py  log_config.py  modeller.py  plot.py  type_hints.py  utils.py
tests/: __init__.py  test_auxiliar_functions.py  test_cosmo.py  test_dataset.py  test_e3nn.py  test_featurizer.py  test_filter.py  test_fingerprint_modeller.py  test_gpytorch.py  test_graph_modeller.py  test_hdf5.py  test_lint.py  test_logger.py  test_modeller.py  test_models.py  test_mpnn.py  test_mypy.py  test_options.py  (+12 more)
(+130 files in other folders)
