[metadata]
description-file = README.rst

[aliases]
# Define `python setup.py test`
test=pytest

[coverage:run]
branch = True
source = swan

[pycodestyle]
ignore = E302,E301,E501,W504  # E302 & E301 due pycodestyle's awful support for @overload
select = W503  # W503 looks better than W504
max-line-length = 100

[tool:pytest]
testpaths = tests
addopts = --cov --cov-report xml --cov-report term --cov-report html

# Define `python setup.py build_sphinx`
[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1
builder = html

[mypy]
plugins = numpy.typing.mypy_plugin